welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: not found: value dance
dance=true;
^BDR2:2: error: not found: value pas
pas="";
^BDR2:3: error: not found: value dance
while (dance){
       ^BDR2:4: error: not found: value pas
	pas=litMessage();
        ^BDR2:5: error: not found: value pas
	pas match {
        ^