welcome.lessons.welcome.bdr.BDR2.scala.code
dance=true;
pas="";
while (dance){
	pas=litMessage();
	pas match {
		case "A" => 	avance();
		case "B" =>	avance();
					avance();
		case "C" =>	avance();
					avance();
					avance();
		case "D" =>	avance();
					avance();
					avance();
					avance();
		case "E" =>	avance();
					avance();
					avance();
					avance();
					avance();
		case "F" =>	avance();
					avance();
					avance();
					avance();
					avance();
					avance();
		case "I" => 	retourne();
					avance();
		case "L" =>	gauche();
					avance();
		case "R" =>	droite();
					avance();
		case "Z" => 	recule();
		case "Y" =>	recule();
					recule();
		case "X" =>	recule();
					recule();
					recule();
		case "W" =>	recule();
					recule();
					recule();
					recule();
		case "V" =>	recule();
					recule();
					recule();
					recule();
					recule();
		case "U" =>	recule();
					recule();
					recule();
					recule();
					recule();
					recule();
	}
}
